# Student-Project

./: .gitignore  README.md  conftest.py  postcall.py  pyproject.toml  requirements.txt  run_tests.py  setup_github.sh  start.sh  student_api.py  test_books.py  test_scenrios.py  test_student.py  test_student_api.py
.github/workflows/: test.yml
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: AddBook.js  AddStudent.js  BookList.js  EditBook.js  EditStudent.js  Navbar.js  StudentList.js
restassurd/: pom.xml
restassurd/data/: books.json  students.json
restassurd/restassurd/: README.md  pom.xml
restassurd/restassurd/src/main/java/callapi/: Application.java  Book.java  BookController.java  BookService.java
restassurd/src/main/java/callapi/: ApiError.java  Book.java  BookController.java  BookService.java  GlobalExceptionHandler.java  Main.java  OpenApiConfig.java  Student.java  StudentController.java  StudentNotFoundException.java  StudentService.java  SwaggerConfig.java  WebConfig.java
restassurd/src/main/resources/: application.properties
