[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-api-testing"
version = "0.1.0"
description = "API testing suite for Student management system"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pytest>=7.4.3",
    "pytest-html>=4.1.1"
]

[project.urls]
Homepage = "https://github.com/yourusername/student-api-testing"
Repository = "https://github.com/yourusername/student-api-testing"
Issues = "https://github.com/yourusername/student-api-testing/issues"
Documentation = "https://github.com/yourusername/student-api-testing#readme"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--html=reports/report.html",
    "--self-contained-html"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
