[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-book-api-testing"
version = "0.1.0"
description = "API testing suite for Student and Book management system"
authors = [{name = "Youssef ElHodaiby", email = "youssef.elhodaiby@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pytest>=7.4.3",
    "pytest-html>=4.1.1"
]

[project.urls]
Homepage = "https://github.com/YoussefElHodaiby/Student-Project"
Repository = "https://github.com/YoussefElHodaiby/Student-Project"
Issues = "https://github.com/YoussefElHodaiby/Student-Project/issues"
Documentation = "https://github.com/YoussefElHodaiby/Student-Project#readme"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--html=reports/report.html",
    "--self-contained-html"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "student: marks tests for student API endpoints",
    "book: marks tests for book API endpoints"
]
